<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">module_usercenter</string>
    <string name="please_input_username" tools:ignore="ExtraTranslation">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="goto_register">注册账号</string>
    <string name="login">登录</string>
    <string name="user_register">用户注册</string>
    <string name="register">注册</string>
    <string name="str_input_name">请输入用户名</string>
    <string name="str_hello">你好，</string>
    <string name="str_welcome_login">欢迎登录</string>
    <string name="str_logining">登录中</string>
    <string name="mine_str_go_login">去登陆</string>
</resources>
