<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
            android:layout_marginTop="@dimen/dp_120"
            android:id="@+id/ll_wel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:orientation="vertical">

        <TextView
                style="@style/CommonLevel1TitleStyle"
                android:text="@string/str_hello" />

        <TextView
                style="@style/CommonLevel1TitleStyle"
                android:text="@string/str_welcome_login" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/commonHorizontalMargin"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_input_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_login_username"
            style="@style/LoginEditTextStyle"
            android:drawableLeft="@drawable/login_icon_phone"
            android:drawablePadding="10dp"
            android:hint="@string/please_input_username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusForward="@+id/et_login_password"
            android:text="@string/str_input_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/gray_ea" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <CheckBox
                android:id="@+id/cb_login_pwd_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/login_icon_pwd_visible"
                android:paddingLeft="@dimen/dp_15" />

            <EditText
                android:id="@+id/et_login_password"
                style="@style/LoginEditTextStyle"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_toLeftOf="@id/cb_login_pwd_visible"
                android:drawableLeft="@drawable/login_icon_password"
                android:drawablePadding="@dimen/dp_10"
                android:hint="@string/please_input_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/goto_register"
        android:textColor="@color/black_61"
        android:textSize="@dimen/textSizePrimaryContent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
            android:layout_marginHorizontal="@dimen/commonHorizontalMargin"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_login_btn_bg"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textSizePrimaryContent" />

</LinearLayout>
