<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/commonTopMargin"
            android:layout_marginLeft="@dimen/commonRightMargin"
            android:src="@drawable/ic_back" />

    <TextView
            style="@style/CommonLevel1TitleStyle"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_120"
            android:text="@string/register" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

        <EditText
                android:id="@+id/et_register_username"
                style="@style/RegisterEditTextStyle"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:hint="@string/please_input_username"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/et_register_password" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_ea" />

        <EditText
                android:id="@+id/et_register_password"
                style="@style/RegisterEditTextStyle"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:hint="@string/please_input_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_ea" />

        <EditText
                android:id="@+id/et_register_repassword"
                style="@style/RegisterEditTextStyle"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:hint="@string/please_input_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_ea" />

        <Button
                android:id="@+id/btn_register"
                style="@style/PrimaryButtonStyle"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/register" />

    </LinearLayout>

</LinearLayout>